# vanilla-tweaks-partition

./: .gitignore  .pre-commit-config.yaml  LICENCE.txt  README.md  SECURITY.md  pyproject.toml
src/vanilla_tweaks_partition/: main.py
